logs/importer.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Crypto'...
Listing './lib/python3.5/site-packages/Crypto/Cipher'...
Listing './lib/python3.5/site-packages/Crypto/Hash'...
Listing './lib/python3.5/site-packages/Crypto/IO'...
Listing './lib/python3.5/site-packages/Crypto/Math'...
Listing './lib/python3.5/site-packages/Crypto/Protocol'...
Listing './lib/python3.5/site-packages/Crypto/PublicKey'...
Listing './lib/python3.5/site-packages/Crypto/Random'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Cipher'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Cipher/test_vectors'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Cipher/test_vectors/AES'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Cipher/test_vectors/TDES'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Hash'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Hash/test_vectors'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Hash/test_vectors/BLAKE2b'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Hash/test_vectors/BLAKE2s'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Hash/test_vectors/SHA3'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Hash/test_vectors/keccak'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/IO'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Math'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Protocol'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/PublicKey'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/PublicKey/test_vectors'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/PublicKey/test_vectors/ECC'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Random'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Signature'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Signature/test_vectors'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Signature/test_vectors/DSA'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Signature/test_vectors/ECDSA'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Signature/test_vectors/PKCS1-PSS'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Signature/test_vectors/PKCS1-v1.5'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Util'...
Listing './lib/python3.5/site-packages/Crypto/Signature'...
Listing './lib/python3.5/site-packages/Crypto/Util'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/importer'...
Listing './lib/python3.5/site-packages/importer/lib'...
Listing './lib/python3.5/site-packages/importer/lib/mixpanel'...
Compiling './lib/python3.5/site-packages/importer/lib/mixpanel/mixpanel.py'...
***   File "./lib/python3.5/site-packages/importer/lib/mixpanel/mixpanel.py", line 99
    print data
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/importer/mix.py'...
***   File "./lib/python3.5/site-packages/importer/mix.py", line 1107
    print '[importer]: %s' % message
                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/importer-1.2.egg-info'...
Listing './lib/python3.5/site-packages/importer_tests'...
Compiling './lib/python3.5/site-packages/importer_tests/runner.py'...
***   File "./lib/python3.5/site-packages/importer_tests/runner.py", line 113
    print "ERROR! XML testrunner (py module `xmlrunner`) could not be imported. Please run in text-only mode."
                                                                                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/importer_tests/test_mix.py'...
***   File "./lib/python3.5/site-packages/importer_tests/test_mix.py", line 124
    self.assertEqual(valid_dt.month, 01)
                                      ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/keen'...
Listing './lib/python3.5/site-packages/keen-0.5.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pycryptodome-3.4.7.egg-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.10.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
